# gazprominform_testtask

./: .gitignore  Dockerfile  README.md  pyproject.toml
gazprominfo/: manage.py  pytest.ini
gazprominfo/gazprominfo_app/: apps.py  crud.py  models.py  parsers.py  permissions.py  urls.py  views.py
gazprominfo/gazprominfo_app/migrations/: 0001_initial.py
gazprominfo/gazprominfo_app/test/: conftest.py  email_api_view_tests.py  mock_objects.py  permission_tests.py  url_parser_api_view_tests.py
gazprominfo/gazprominfo_app/test/test_data/: test_success_get_emails.json  test_success_parse.json
gazprominfo/gz/: asgi.py  settings.py  urls.py  wsgi.py
